jquery adaptation of task 9. "leveraging event delegation" example code

--- a/dom/delegation.html
+++ b/dom/delegation.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <script type="text/javascript" src="../prototype.js"></script>
+  <script type="text/javascript" src="../jquery-1.4.4.min.js"></script>
   <script type="text/javascript" src="delegation.js"></script>
   <title>Leveraging event delegation - Pocket JavaScript</title>
 </head>
