--- a/dom/delegation.html
+++ b/dom/delegation.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <script type="text/javascript" src="../jquery-1.4.4.min.js"></script>
-  <script type="text/javascript" src="delegation.js"></script>
-  <title>Leveraging event delegation - Pocket JavaScript</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<script type="text/javascript" src="../jquery-1.4.4.min.js"></script>
+<script type="text/javascript" src="delegation.js"></script>
+<title>Leveraging event delegation - Pocket JavaScript</title>
 </head>
+
 <body>
+
 <h1>Leveraging event delegation</h1>
+
 <!-- START:MAIN -->
 <ul id="items">
-  <!-- We will insert togglers in each LI using JS -->
-  <li><div><p>Data 1</p><p>Data 2</p></div></li>
-  <li><div><p>Data 1</p><p>Data 2</p></div></li>
-  <li><div><p>Data 1</p><p>Data 2</p></div></li>
-  <!-- Potentially lots more elements here… -->
+	<!-- We will insert togglers in each LI using JS -->
+	<li>
+		<div>
+			<p>Data 1</p>
+			<p>Data 2</p>
+		</div>
+	</li>
+	<li>
+		<div>
+			<p>Data 1</p>
+			<p>Data 2</p>
+		</div>
+	</li>
+	<li>
+		<div>
+			<p>Data 1</p>
+			<p>Data 2</p>
+		</div>
+	</li>
+	<!-- Potentially lots more elements here… -->
 </ul>
 <!-- END:MAIN -->
+
 </body>
 </html>
